Week2/force-app/main/default/objects/Class_Roster__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Class Roster</relationshipLabel>
    <relationshipName>Class_Rosters</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>