Week2/force-app/main/default/objects/Class_Roster__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <label>Student Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Class Roster</relationshipLabel>
    <relationshipName>Class_Rosters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>